Move source view to regular views, drop "complex views"

--- a/src/views/index.css
+++ b/src/views/index.css
@@ -27,6 +27,7 @@
 @import url('./section.css');
 @import url('./select.css');
 @import url('./signature.css');
+@import url('./source.css');
 @import url('./struct.css');
 @import url('./table-cell.css');
 @import url('./table-row.css');
