--- a/src/widget/widget.css
+++ b/src/widget/widget.css
@@ -1,6 +1,8 @@
 /* isolate-style-root: discovery, discovery-root, discovery-root-darkmode */
 .discovery {
     display: flex;
+    overflow: hidden;
+    height: 100%;
 }
 
 .discovery-root {
