--- a/src/app/app.css
+++ b/src/app/app.css
@@ -33,30 +33,8 @@
     visibility: hidden;
     transition: all .2s;
 }
-.discovery > .loading-overlay:not(.error) .progress {
-    content: '';
-    display: block;
-    position: relative;
-    overflow: hidden;
-    margin-top: 4px;
-    box-sizing: border-box;
-    height: 3px;
+.discovery > .loading-overlay:not(.error) .progressbar {
     max-width: 300px;
-    background: rgba(198, 198, 198, 0.3);
-    border-radius: 2px;
-}
-.discovery > .loading-overlay:not(.error) .progress::before {
-    content: '';
-    display: block;
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    left: 0;
-    top: 0;
-    transform: scaleX(var(--progress, 0));
-    transform-origin: left;
-    /* transition: transform .2s; */ /* since Chrome (tested on 85) freezes transition during js loop */
-    background-color: #1f7ec5;
 }
 
 .discovery-nav-popup > .toggle-menu-item {
