--- a/src/widget/widget.css
+++ b/src/widget/widget.css
@@ -3,14 +3,8 @@
     transition: opacity .2s;
 }
 
-.discovery {
-    display: flex;
-    overflow: hidden;
-    height: 100%;
-}
-
 .discovery-root {
-    all: reset;
+    all: initial;
 
     position: relative;
 
@@ -75,6 +69,12 @@
     --discovery-fmt-string-color: #7faf20;
     --discovery-fmt-string-underline-color: #85ab51;
     --discovery-fmt-string-hover-color: #97cf26;
+}
+
+.discovery {
+    display: flex;
+    overflow: hidden;
+    height: 100%;
 }
 
 .discovery-content {
