--- a/src/views/index.css
+++ b/src/views/index.css
@@ -24,6 +24,7 @@
 @import url('./nav-button.css');
 @import url('./page-header.css');
 @import url('./popup.css');
+@import url('./progress.css');
 @import url('./section.css');
 @import url('./select.css');
 @import url('./signature.css');
