--- a/src/widget/widget.css
+++ b/src/widget/widget.css
@@ -1,219 +1,3 @@
-:host {
-    transition: opacity .2s;
-}
-
-.discovery-root {
-    all: initial;
-
-    position: relative;
-
-    font-family: Tahoma, Verdana, Arial, sans-serif;
-    font-size: 14px;
-    line-height: 1.6;
-    -webkit-text-size-adjust: none;
-    text-size-adjust: none;
-
-    background-color: var(--discovery-background-color, white);
-    color: var(--discovery-color, black);
-    transition-property: background-color, color;
-    transition-duration: .25s;
-    transition-timing-function: ease-in;
-
-    --discovery-background-color: white;
-    --discovery-color: black;
-    --discovery-input-bg-color: white;
-    --discovery-input-color: black;
-    --discovery-button-color: black;
-    --discovery-button-bg-color: white;
-    --discovery-button-border-color: #cccccc;
-    --discovery-button-hover-color: black;
-    --discovery-button-hover-bg-color: #f5f5f5;
-    --discovery-button-hover-border-color: #cccccc;
-
-    --discovery-fmt-color: #666;
-    --discovery-fmt-hover-color: #333;
-    --discovery-fmt-flag-color: #ff6e13;
-    --discovery-fmt-variable-color: #047d65;
-    --discovery-fmt-property-color: #bd6476;
-    --discovery-fmt-keyword-color: #07a;
-    --discovery-fmt-number-color: #07a;
-    --discovery-fmt-atom-color: #07a;
-    --discovery-fmt-string-color: #690;
-    --discovery-fmt-string-highlight-color: rgba(35, 165, 25, 0.1);
-    --discovery-fmt-comment-color: #75787b;
-}
-.discovery-root-darkmode {
-    --discovery-background-color: #242424;
-    --discovery-color: #cccccc;
-    --discovery-link-color: #1c87d4;
-    --discovery-link-underline-color: rgb(37, 146, 226, 50%);
-    --discovery-link-hover-color: #4aa6e8;
-    --discovery-input-bg-color: #343434;
-    --discovery-input-color: #e8e8e8;
-    --discovery-button-color: #cccccc;
-    --discovery-button-bg-color: #3a3a3a;
-    --discovery-button-border-color: #cccccc;
-    --discovery-button-hover-color: black;
-    --discovery-button-hover-bg-color: #f5f5f5;
-    --discovery-button-hover-border-color: #cccccc;
-
-    --discovery-fmt-color: #999;
-    --discovery-fmt-hover-color: #aaa;
-    --discovery-fmt-flag-color: #ff8030;
-    --discovery-fmt-variable-color: #16a78a;
-    --discovery-fmt-property-color: #d17a8c;
-    --discovery-fmt-keyword-color: #0f8dc2;
-    --discovery-fmt-number-color: #0f8dc2;
-    --discovery-fmt-atom-color: #0f8dc2;
-    --discovery-fmt-string-color: #7faf20;
-    --discovery-fmt-string-underline-color: #85ab51;
-    --discovery-fmt-string-hover-color: #97cf26;
-}
-
-.discovery {
-    display: flex;
-    overflow: hidden;
-    height: 100%;
-}
-
-.discovery-content {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    overflow: auto;
-    z-index: 10;
-}
-
-.discovery-content > .page {
-    padding: 35px 40px 30px;
-}
-
-.discovery-sidebar {
-    position: relative;
-    z-index: 200;
-    overflow: auto;
-    width: 350px;
-    background: rgba(105, 105, 105, 0.1);
-    border-right: 1px solid rgba(85, 85, 85, 0.2);
-    box-shadow: 2px 0 5px -3px rgba(0, 0, 0, .26);
-    transform: translate3d(0, 0, 0);
-}
-
-.discovery-sidebar:empty {
-    display: none;
-}
-.discovery-sidebar .view-tabs,
-.discovery-sidebar .view-tabs-content,
-.discovery-sidebar .view-content-filter {
-    display: flex;
-    flex-direction: column;
-    max-height: 100%;
-}
-.discovery-sidebar .view-tabs {
-    height: 100%;
-}
-.discovery-sidebar .view-tab.active::before {
-    background-color: white;
-    transition-property: background-color;
-    transition-duration: .25s;
-    transition-timing-function: ease-in;
-}
-.discovery-root-darkmode .discovery-sidebar .view-tab.active::before {
-    background-color: #363637;
-}
-.discovery-sidebar .view-content-filter > .view-input {
-    border-bottom: 1px solid rgba(170, 170, 170, 0.4);
-    margin-bottom: -1px;
-    background-color: white;
-    transition-property: background-color;
-    transition-duration: .25s;
-    transition-timing-function: ease-in;
-}
-.discovery-root-darkmode .discovery-sidebar .view-content-filter > .view-input {
-    background-color: #363637;
-}
-.discovery-sidebar .view-content-filter > .view-input input,
-.discovery-sidebar .view-content-filter > .view-input input:focus {
-    background-color: transparent;
-    outline: none;
-    box-shadow: none;
-    border: none;
-    border-radius: 0;
-}
-.discovery-sidebar .view-content-filter > .content > .view-list {
-    padding: 8px 0 8px 12px;
-}
-.discovery-sidebar .view-content-filter > .content > .view-tree {
-    padding: 4px 0 8px 8px;
-}
-.discovery-sidebar .view-list-item:first-child .view-toc-section {
-    margin-top: -8px;
-}
-.discovery-sidebar .view-list-item:last-child .view-toc-section {
-    margin-bottom: -8px;
-}
-.discovery-sidebar .view-toc-section {
-    margin-left: -12px;
-}
-.discovery-sidebar .view-text-match {
-    color: rgba(40, 40, 40, 0.85);
-    background: rgba(255, 255, 255, 0.45);
-    border-bottom: 2px solid orange;
-    line-height: 1.2;
-    display: inline-block;
-    border-radius: 3px;
-    padding: 0 1px;
-}
-
-.discovery-nav {
-    position: absolute;
-    z-index: 102;
-    top: 0;
-    right: 40px;
-    padding: 0 1px 1px;
-    border-radius: 0 0 6px 6px;
-    background-color: rgba(255, 255, 255, .92);
-    transition: background-color .25s ease-in;
-    user-select: none;
-}
-.discovery-root-darkmode .discovery-nav {
-    background-color: rgba(36, 36, 36, .92);
-}
-@supports (backdrop-filter: blur(5px)) or (-webkit-backdrop-filter: blur(5px)) {
-    .discovery-nav {
-        background-color: rgba(255, 255, 255, .8);
-        -webkit-backdrop-filter: blur(5px);
-        backdrop-filter: blur(5px);
-    }
-    .discovery-root-darkmode .discovery-nav {
-        background-color: rgba(36, 36, 36, .8);
-    }
-}
-.discovery-nav > :first-child {
-    border-bottom-left-radius: 5px;
-    transition: border-radius .25s ease-in-out;
-}
-.discovery-nav > :last-child {
-    border-bottom-right-radius: 5px;
-    transition: border-radius .25s ease-in-out;
-}
-.discovery-nav .view-nav-button.discovery-view-popup-active {
-    border-radius: 0;
-}
-.discovery-nav .view-nav-button[data-name="burger"] {
-    background-image: url('./burger-menu.svg');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 18px;
-}
-
-.discovery[data-dzen] .discovery-sidebar,
-.discovery[data-dzen] .discovery-nav {
-    display: none;
-}
-
-.discovery[data-compact] .discovery-content,
-.discovery[data-compact] .page {
-    padding: 0;
-}
+@import './style/base.css';
+@import './style/sidebar.css';
+@import './nav.css';
