Add image view, change image-preview

--- a/src/views/index.css
+++ b/src/views/index.css
@@ -12,6 +12,7 @@
 @import url('./expand.css');
 @import url('./headers.css');
 @import url('./hstack.css');
+@import url('./image.css');
 @import url('./image-preview.css');
 @import url('./indicator.css');
 @import url('./input.css');
