--- a/src/views/image-preview.css
+++ b/src/views/image-preview.css
@@ -1,6 +1,16 @@
 .view-image-preview {
-    padding: 15px;
-    background-image: linear-gradient(45deg,#eee 25%,transparent 0,transparent 75%,#eee 0,#eee),linear-gradient(45deg,#eee 25%,transparent 0,transparent 75%,#eee 0,#eee);
-    background-position: 0 0,10px 10px;
+    --x: rgba(198, 198, 198, 0.3);
+    display: flex;
+    justify-content: center;
+    padding: 16px;
+    background-image:
+        linear-gradient(45deg, var(--x) 25%, transparent 0, transparent 75%, var(--x) 0, var(--x)),
+        linear-gradient(45deg, var(--x) 25%, transparent 0, transparent 75%, var(--x) 0, var(--x));
+    background-position: 0 0, 10px 10px;
     background-size: 20px 20px;
+}
+
+.view-image-preview .view-image {
+    background-color: transparent;
+    opacity: 1;
 }
