--- a/src/views/image-preview.css
+++ b/src/views/image-preview.css
@@ -1,11 +1,11 @@
 .view-image-preview {
-    --x: rgba(198, 198, 198, 0.3);
+    --image-preview-bg-color: rgba(198, 198, 198, 0.3);
     display: flex;
     justify-content: center;
     padding: 16px;
     background-image:
-        linear-gradient(45deg, var(--x) 25%, transparent 0, transparent 75%, var(--x) 0, var(--x)),
-        linear-gradient(45deg, var(--x) 25%, transparent 0, transparent 75%, var(--x) 0, var(--x));
+        linear-gradient(45deg, var(--image-preview-bg-color) 25%, transparent 0, transparent 75%, var(--image-preview-bg-color) 0, var(--image-preview-bg-color)),
+        linear-gradient(45deg, var(--image-preview-bg-color) 25%, transparent 0, transparent 75%, var(--image-preview-bg-color) 0, var(--image-preview-bg-color));
     background-position: 0 0, 10px 10px;
     background-size: 20px 20px;
 }
