Add thousandth delimiter for default rendering of a number in `table` view cell

--- a/src/views/table-cell.css
+++ b/src/views/table-cell.css
@@ -5,6 +5,9 @@
 .view-table-cell.number {
     text-align: right;
 }
+.view-table-cell .num-delim {
+    padding-left: 2px;
+}
 .view-table-cell.complex {
     color: #888;
 }
