--- a/src/views/_usage.css
+++ b/src/views/_usage.css
@@ -4,10 +4,21 @@
 .discovery-view-usage .usage-render {
     position: relative;
     z-index: 0;
-    margin: 0 -24px 10px;
-    padding: 24px;
+    margin: 15px -24px 10px;
+    padding: 38px 24px 24px 24px;
     border: solid rgba(170, 170, 170, 0.2);
-    border-width: 1px 0;
+    border-width: 1px 0 1px 0;
+}
+.discovery-view-usage .usage-render::before {
+    content: 'demo';
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 2px 24px 3px 24px;
+    font-size: 9px;
+    line-height: 1;
+    background-color: rgba(170, 170, 170, 0.2);
+    border-bottom-right-radius: 4px;
 }
 .discovery-view-usage .usage-section > .view-h2 {
     margin-top: 1.2em;
