--- a/src/views/_usage.css
+++ b/src/views/_usage.css
@@ -4,10 +4,11 @@
 .discovery-view-usage .usage-render {
     position: relative;
     z-index: 0;
-    margin: 15px -24px 10px;
-    padding: 38px 24px 24px 24px;
+    margin: 15px 0 10px;
+    padding: 30px 16px 16px;
     border: solid rgba(170, 170, 170, 0.2);
-    border-width: 1px 0 1px 0;
+    border-width: 2px;
+    border-radius: 3px;
 }
 .discovery-view-usage .usage-render::before {
     content: 'demo';
