--- a/src/app/app.css
+++ b/src/app/app.css
@@ -5,7 +5,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    padding: 20px;
+    padding: 35px 40px;
     background: var(--discovery-background-color);
     font-size: 16px;
     will-change: opacity;
