--- a/src/views/image-preview.css
+++ b/src/views/image-preview.css
@@ -1,16 +1,16 @@
 .view-image-preview {
-    --image-preview-bg-color: rgba(198, 198, 198, 0.3);
+    --image-preview-bg-color: rgba(119, 119, 119, 0.125);
     display: flex;
     justify-content: center;
     padding: 16px;
     background-image:
-        linear-gradient(45deg, var(--image-preview-bg-color) 25%, transparent 0, transparent 75%, var(--image-preview-bg-color) 0, var(--image-preview-bg-color)),
-        linear-gradient(45deg, var(--image-preview-bg-color) 25%, transparent 0, transparent 75%, var(--image-preview-bg-color) 0, var(--image-preview-bg-color));
+        linear-gradient(45deg, var(--image-preview-bg-color) 25%, transparent 0, transparent 75%, var(--image-preview-bg-color) 75%),
+        linear-gradient(45deg, var(--image-preview-bg-color) 25%, transparent 0, transparent 75%, var(--image-preview-bg-color) 75%);
     background-position: 0 0, 10px 10px;
     background-size: 20px 20px;
 }
 
 .view-image-preview .view-image {
-    background-color: transparent;
+    /* background-color: transparent; */
     opacity: 1;
 }
