Move extension modules to a dedicated folder

--- a/src/widget/index.css
+++ b/src/widget/index.css
@@ -1,4 +1,4 @@
 @import url('../views/index.css');
 @import url('../pages/index.css');
 @import url('./widget.css');
-@import url('./inspector/index.css');
+@import url('./extensions/inspector.css');
