--- a/src/lib.css
+++ b/src/lib.css
@@ -1,7 +1,7 @@
 @import url('./pages/index.css');
 @import url('./views/index.css');
 @import url('./widget/widget.css');
-@import url('./inspector/index.css');
+@import url('./extensions/inspector.css');
 @import url('./app/app.css');
 
 .discovery .buildin-view-config-error {
