Tweak error on data load output

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -29,6 +29,9 @@
 .discovery > .loading-overlay.error .view-alert .view-header {
     margin-top: 0;
 }
+.discovery > .loading-overlay.error .view-alert .view-badge {
+    color: inherit;
+}
 .discovery > .loading-overlay.error .view-alert pre {
     font-family: Consolas, Liberation Mono, Menlo, monospace;
     font-size: 13px;
