--- a/src/pages/report/editor-common.css
+++ b/src/pages/report/editor-common.css
@@ -85,7 +85,7 @@
     width: 100%;
     box-sizing: border-box;
     min-height: 9em;
-    font-family: Consolas, Monaco, monospace;
+    font-family: var(--discovery-monospace-font-family);
     font-size: 12px;
     line-height: 18px; 
     border-color: #aaa;
