--- a/src/views/struct/style/index.css
+++ b/src/views/struct/style/index.css
@@ -7,7 +7,7 @@
     margin: 1px 0;
     padding: 7px 8px;
     overflow: auto;
-    font-family: Consolas, Monaco, monospace;
+    font-family: var(--discovery-monospace-font-family);
     font-size: 11px;
     line-height: 18px;
     background: rgba(205, 205, 205, 0.1);
