Fixes and improvements in table view rendering
- Add `scalarAsStruct` and `colSpan` config options to `table-cell`
- Add `cols` and `isScalar()` to the `table-row`'s context
- Change rendering of scalar values using `struct` view
- Change rendering of `null` value as `null` string instead of an empty cell
- Fix rendering of arrays when object values mixed with scalar values
- Fix collapsing a row height when all cells are empty
- Hide a more buttons row when no buttons (gave a few extra pixels in the bottom of a table)

--- a/src/views/table-cell.css
+++ b/src/views/table-cell.css
@@ -1,5 +1,6 @@
 .view-table-cell {
     padding: 2px 8px;
+    height: 19px; /* min cell height */
     vertical-align: top;
 }
 .view-table-cell.number {
@@ -11,6 +12,7 @@
 .view-table-cell.complex {
     color: #888;
 }
+
 .view-table-cell.details {
     padding-left: 14px;
     position: relative;
@@ -64,4 +66,11 @@
 }
 .view-table-cell-details-row > .view-cell-details-content > :last-child {
     margin-bottom: 0 !important;
+}
+
+.view-table-cell > .view-struct,
+.view-table-cell > .view-struct:hover {
+    margin: -1px -8px -2px;
+    padding: 2px 8px 1px;
+    background-color: transparent;
 }
