Add text-numeric view

--- a/src/views/index.css
+++ b/src/views/index.css
@@ -37,6 +37,7 @@
 @import url('./tab.css');
 @import url('./tabs.css');
 @import url('./text-match.css');
+@import url('./text-numeric.css');
 @import url('./toc-section.css');
 @import url('./toggle.css');
 @import url('./toggle-group.css');
