--- a/src/nav/index.css
+++ b/src/nav/index.css
@@ -51,3 +51,27 @@
     margin: 1px -7px 0;
     opacity: .85;
 }
+
+.discovery-nav-popup > .toggle-menu-item {
+    padding: 4px 4px 4px 12px;
+}
+.discovery-nav-popup > .toggle-menu-item .view-toggle-group {
+    display: flex;
+    align-items: center;
+}
+.discovery-nav-popup > .toggle-menu-item .view-toggle-group-before {
+    flex: 1;
+}
+.discovery-nav-popup > .toggle-menu-item .view-toggle {
+    font-size: 11px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+}
+
+.discovery-nav-popup .powered-by-discoveryjs {
+    padding: 2px 6px 4px;
+    font-size: 11px;
+    opacity: .75;
+    background-color: #8882;
+    text-align: right;
+}
