Draw focus ring only when focused with a keyboard

--- a/src/views/checkbox.css
+++ b/src/views/checkbox.css
@@ -29,10 +29,10 @@
     background-color: rgba(0, 121, 232, 0.68);
     background-image: url('./checkbox.svg');
 }
-.view-checkbox > input:focus {
+.view-checkbox > input:focus-visible {
     box-shadow: 0 0 1px 3px rgba(0, 170, 255, .2);
 }
-.view-checkbox > input:focus:not(:checked) {
+.view-checkbox > input:focus-visible:not(:checked) {
     border-color: rgba(0, 141, 255, 0.75);
 }
 .view-checkbox > input:active {
